<resources>
    <string name="app_name">DemoApp</string>
    <string name="empty_list_item">No items to show</string>
    <string name="title_hint">add a title</string>
    <string name="description_hint">add a description</string>
    <string name="image_view_description">Preview photo</string>
    <string name="video_fragment_text_view">Press and hold to select video</string>
    <string name="video_list_activity_title">Pick a video</string>
    <string name="item_thumbnail">Item thumbnail image</string>
    <string name="audio_item_image">Audio image</string>
    <string name="audio_list_activity_title">Pick an audio track</string>
    <string name="audio_dialog_title">Confirm audio selection</string>
    <string name="note_deletion_dialog_title">Confirm deletion?</string>
    <string name="dialog_positive_text">Agree</string>
    <string name="dialog_negative_text">Cancel</string>
    <string name="video_dialog_title">Confirm video selection</string>
    <string name="toggle_button_label">Press to record</string>
    <string name="toggle_button_label_stop">Press to stop</string>
    <string name="error_max_duration">Maximum duration reached</string>
    <string name="error_max_file_size">Maximum file size reached</string>
    <string name="error_unknown">Unknown error occurred</string>
    <string name="error_generic">Error recording audio</string>
    <string name="audio_playback">Start audio playback</string>
    <string name="pause_playback">Pause audio playback</string>
    <string name="stop_playback">Stop audio playback</string>
    <string name="error_playing_audio">Error playing audio file</string>
    <string name="menu_delete_item_label">Delete item</string>
    <string name="photo_note_content_description">Photo</string>
    <string name="required_permission_feature">Click on the link to enable permissions</string>
    <string name="permission_not_given_message">You need to provide the required permissions to execute the feature</string>
    <string name="snackbar_action_text">Change app permissions</string>
    <string name="title_transition">titleTransition</string>
    <string name="description_transition">descriptionTransition</string>
    <string name="thumbnail_transition">imagePreviewTransition</string>
    <string name="action_about_title">About</string>

</resources>
